# liminal-screen

./: .env.example  .gitignore  AGENT.md  LICENSE  NOTICE  README.md  TODO.md  index.html  package.json  tsconfig.json  vitest.config.ts
.hermes/plans/app-identity-promotion/: IMPLEMENTATION.md  PLAN.md
.hermes/plans/autoupdate/: IMPLEMENTATION_SUMMARY.md  PLAN.md
.hermes/plans/factory-reset-browser-cleanup/: CLEANUP.md  PLAN.md
.hermes/plans/frontend-cleanup-reactive-ux/: PLAN.md  RESET-BUG-ANALYSIS.md
.hermes/plans/linux-speech-synthesis-workaround/: IMPLEMENTATION_SUMMARY.md  PLAN.md
.hermes/plans/multiplatform-fixes/: PLAN.md
.hermes/plans/native-storage-cleanup/: PLAN.md  RETHINK.md
.hermes/plans/notifications/: IMPLEMENTATION_SUMMARY.md  PLAN.md
.hermes/plans/objc2-migration/: IMPLEMENTATION_SUMMARY.md  PLAN.md
.hermes/plans/persistent-storage-sync/: GAP-ANALYSIS.md  IMPLEMENTATION.md  PLAN.md
.hermes/plans/preview-window-windows-deadlock/: PLAN.md
.hermes/plans/remote-options-window/: IMPLEMENTATION_SUMMARY.md  PLAN.md
.hermes/plans/screensaver-state-machine/: IMPLEMENTATION_REPORT.md  PLAN.md
.hermes/plans/security/: PLAN.md
.hermes/plans/testing/: IMPLEMENTATION_SUMMARY.md  PLAN.md
.hermes/skills/find-unknowns/: SKILL.md
agent/: README.md  bug-analysis-fixes.md  complete-issue-resolution-summary.md  final-summary.md  implementation-summary.md  issue-1-fix-summary.md  issue-1-implementation-guide.md  issue-2-fix-summary.md  issue-3-fix-summary.md  issue-4-fix-summary.md  issue-resolution-documentation.md  issue-resolution-plan.md  key-files.md  key-findings-and-improvements.md  liminal-screen-analysis.md  power-management-enhancement.md  power-management-implementation-plan.md  sample-screensaver-activity.js  screensaver-engine-summary.md  study-summary.md  summary-report.md  tauri-v2-modernization-plan.md  technical-debt.md  technical-documentation.md  technical-implementation-plan.md  technical-specification.md  verify-fixes.sh
docs/: index.html  screensaver.css  screensaver.js
options/: index.html  main.js  main.ts  package.json  remote-options.js  sw.js
scripts/: build-tauri-config.ts  set-identity.ts
src/: main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  options.json  saver.json
src-tauri/icons/: icon.icns
src-tauri/src/: autoplay_media.rs  display_manager.rs  lib.rs  main.rs  notification_service.rs  power_monitor.rs  screensaver.rs  screensaver_engine.rs  speech.rs  speech_polyfill.js  updater.rs
src/app/: format.test.ts  format.ts  reactive.test.ts  reactive.ts  speech-polyfill.test.ts  types.ts
src/app/options/: options.ts  sw.js
src/app/power-monitor/: power-monitor.ts
src/app/preview/: preview.ts
(+3 files in other folders)
