[package]
name = "liminal-screen"
version = "0.1.0"
description = "A system tray screensaver application built with Tauri v2"
authors = ["tomaszatoo"]
edition = "2021"

[lib]
name = "liminal_screen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
# Direct desktop notifications (no tauri plugin: the notification plugin
# injects a Notification shim into every webview, which triggers blocked-IPC
# errors in the remote saver/preview windows; notifications here are Rust-only)
notify-rust = "4.11"
tokio = "1"
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "3", features = ["json"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_System_Shutdown",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
# Must match the webkit2gtk major/features used by tauri itself so the
# WebView type returned by PlatformWebview::inner() unifies.
webkit2gtk = { version = "2", features = ["v2_40"] }
